  * fixed transparent window frame around dialogs in VS2010
  * added drag'n'drop of project folders
  * added support for "Stop Outlining" and "Toggle All Outlining"
  * tweaked outlining for multi-dimensional arrays and token strings
  * build order of custom/resource compilations now sorted by dependencies
  * project items now sorted alphabetically
  * fixed a few more issues with relative paths causing a source file to be opened twice in the editor

2011-08-25 Version 0.3.26

  * fixed regression in last version: single file compilation did not build any d files
  * single file compilation: avoid relinking every time
  * seperate compile and link: no longer trashes dependencies in link step
  * goto definition, search symbol: now line number adjusted according to changes since last successful build
  * fix: resource files in sub folders would not build because the same folders were expected in the intermediate directory
  * global settings: split page into directories/settings pages to make option "Show build time" accessible
  * global settings: added option to disable sorting projects
  * parser now accepts "do {} while(cond)" without trailing ';'
  * project options macro $(PROJECTNAME) now uses the name in the solution instead of the project file name
  * fixed bad indentation of first contract
  * fixed colorization of first token after debug condition without arguments
  * "is" now always colored as operator, not as keyword
  * updated to build with dmd 2.055beta

unreleased Version 0.3.27

  * smart reindenting line when typing last char of sole "in", "out" and "body"
  * tweaked smart indenting with respect to enumerators, arrays, labels and more
  * paste a full line or more now causes automatic reinentation (global option to disable)
  * fix: build phobos browse information broken in last version
  * some internal errors are now reproted to the output window (like failing to parse JSON file)